--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
             <div>
               <p class="text-uppercase small mb-1" style="color: #2b2b2b; font-weight: 500;">Shipment</p>
               <h3 class="fw-bold" style="color: #2b2b2b;">{{ shipment }}</h3>
-              <p class="text-muted small">Tháng này (completed/total)</p>
+              <p class="text-muted small">Đã Ship / Tổng số</p>
             </div>
             <div class="rounded-circle bg-white d-flex justify-content-center align-items-center" style="width:48px; height:48px;">
               <i class="material-icons" style="color: #ffa726;">conveyor_belt</i>
