--- a/src/app/pages/shipment/shipment.component.html
+++ b/src/app/pages/shipment/shipment.component.html
@@ -197,6 +197,7 @@
     
             <!-- Data Table -->
             <div class="table-responsive">
+              <div class="table-scroll-wrapper">
               <table class="table table-striped table-hover">
                 <thead>
           <tr>
@@ -455,6 +456,11 @@
           </tr>
         </tbody>
       </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
